# lesson_28_homework

./: README.md  manage.py  pyproject.toml
ads/migrations/: 0001_initial.py
ads/views/: ad.py
homework_28/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  views.py
users/migrations/: 0001_initial.py  0002_alter_users_options.py
